bk_ida/gccida/g1/move_movables
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_movables/src/loop.c:2266:4: error: expected ';' after expression
rtx v36; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_movables/src/loop.c:2266:5: error: use of undeclared identifier 'v36'
rtx v36; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_movables/src/loop.c:2267:4: error: expected ';' after expression
rtx v37; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_movables/src/loop.c:2267:5: error: use of undeclared identifier 'v37'
rtx v37; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_movables/src/loop.c:2269:4: error: expected ';' after expression
rtx v39; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_movables/src/loop.c:2269:5: error: use of undeclared identifier 'v39'
rtx v39; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_movables/src/loop.c:2270:4: error: expected ';' after expression
rtx v40; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_movables/src/loop.c:2270:5: error: use of undeclared identifier 'v40'; did you mean 'v30'?
rtx v40; // rax 
    ^~~
    v30
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_movables/src/loop.c:2260:5: note: 'v30' declared here
rtx v30; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_movables/src/loop.c:2274:4: error: expected ';' after expression
rtx v44; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_movables/src/loop.c:2274:5: error: use of undeclared identifier 'v44'
rtx v44; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_movables/src/loop.c:2276:4: error: expected ';' after expression
rtx v46; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_movables/src/loop.c:2276:5: error: use of undeclared identifier 'v46'
rtx v46; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_movables/src/loop.c:2279:4: error: expected ';' after expression
rtx set_dest; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_movables/src/loop.c:2279:5: error: use of undeclared identifier 'set_dest'
rtx set_dest; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_movables/src/loop.c:2283:4: error: expected ';' after expression
rtx v53; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_movables/src/loop.c:2283:5: error: use of undeclared identifier 'v53'
rtx v53; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_movables/src/loop.c:2287:4: error: expected ';' after expression
rtx v57; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_movables/src/loop.c:2287:5: error: use of undeclared identifier 'v57'
rtx v57; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_movables/src/loop.c:2289:4: error: expected ';' after expression
rtx v59; // rax 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_movables/src/obj/loop.o] Error 1
